--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,15 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": [
+    "prettier-plugin-tailwindcss",
+    "prettier-plugin-organize-imports"
+  ],
+  "printWidth": 80,
+  "overrides": [
+    {
+      "files": "*.tsx",
+      "options": {
+        "printWidth": 80
+      }
+    }
+  ]
 }
