--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "lucide-react": "^0.469.0",
+    "mongoose": "^8.12.1",
     "next": "15.1.2",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
