--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.12.1",
-    "next": "15.1.2",
+    "next": "^15.3.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
